test/null-check/violations/FirstLetter.out
[31mSafety Violation[00m: Use of potentially null pointer in store at FirstLetter.cc:23
clang++-17: error: clang frontend command failed with exit code 2 (use -v to see invocation)
